@@ -149,62 +149,63 @@ sub _add_profile_backend {
 sub add_defaults {
     my ($SETTING) = @_;
     my %default_settings = (
-        window_width           => 800,
-        window_height          => 600,
-        window_maximize        => TRUE,
-        window_x               => undef,
-        window_y               => undef,
-        'thumb panel'          => 100,
-        scan_window_width      => undef,
-        scan_window_height     => undef,
-        TMPDIR                 => undef,
-        'Page range'           => 'all',
-        version                => undef,
-        'SANE version'         => undef,
-        'libsane-perl version' => undef,
-        selection              => undef,
-        cwd                    => undef,
-        title                  => undef,
-        'title-suggestions'    => undef,
-        author                 => undef,
-        'author-suggestions'   => undef,
-        subject                => undef,
-        'subject-suggestions'  => undef,
-        keywords               => undef,
-        'keyword-suggestions'  => undef,
-        'downsample'           => FALSE,
-        'downsample dpi'       => 150,
-        'cache options'        => TRUE,
-        cache                  => undef,
-        'restore window'       => TRUE,
-        'set_timestamp'        => TRUE,
-        'date offset'          => 0,
-        'pdf compression'      => 'auto',
-        'tiff compression'     => undef,
-        'pdf font'             => undef,
-        quality                => 75,
-        'image type'           => undef,
-        device                 => undef,
-        'device blacklist'     => undef,
-        frontend               => 'libsane-perl',
-        'scan prefix'          => $EMPTY,
-        'unpaper on scan'      => FALSE,
-        'unpaper options'      => undef,
-        'unsharp radius'       => 0,
-        'unsharp sigma'        => 1,
-        'unsharp amount'       => 1,
-        'unsharp threshold'    => 0.05,
-        'allow-batch-flatbed'  => FALSE,
-        'cycle sane handle'    => FALSE,
-        profile                => undef,
-        'default profile'      => undef,
-        'default-scan-options' => undef,
-        'rotate facing'        => 0,
-        'rotate reverse'       => 0,
-        'default filename'     => '%a %y-%m-%d',
-        'view files toggle'    => TRUE,
-        'threshold-before-ocr' => FALSE,
-        'threshold tool'       => 80,
+        window_width                  => 800,
+        window_height                 => 600,
+        window_maximize               => TRUE,
+        window_x                      => undef,
+        window_y                      => undef,
+        'thumb panel'                 => 100,
+        scan_window_width             => undef,
+        scan_window_height            => undef,
+        TMPDIR                        => undef,
+        'Page range'                  => 'all',
+        version                       => undef,
+        'SANE version'                => undef,
+        'libsane-perl version'        => undef,
+        selection                     => undef,
+        cwd                           => undef,
+        title                         => undef,
+        'title-suggestions'           => undef,
+        author                        => undef,
+        'author-suggestions'          => undef,
+        subject                       => undef,
+        'subject-suggestions'         => undef,
+        keywords                      => undef,
+        'keyword-suggestions'         => undef,
+        'downsample'                  => FALSE,
+        'downsample dpi'              => 150,
+        'cache options'               => TRUE,
+        cache                         => undef,
+        'restore window'              => TRUE,
+        'set_timestamp'               => TRUE,
+        'date offset'                 => 0,
+        'pdf compression'             => 'auto',
+        'tiff compression'            => undef,
+        'pdf font'                    => undef,
+        quality                       => 75,
+        'image type'                  => undef,
+        device                        => undef,
+        'device blacklist'            => undef,
+        frontend                      => 'libsane-perl',
+        'scan prefix'                 => $EMPTY,
+        'unpaper on scan'             => FALSE,
+        'unpaper options'             => undef,
+        'unsharp radius'              => 0,
+        'unsharp sigma'               => 1,
+        'unsharp amount'              => 1,
+        'unsharp threshold'           => 0.05,
+        'allow-batch-flatbed'         => FALSE,
+        'adf-defaults-scan-all-pages' => TRUE,
+        'cycle sane handle'           => FALSE,
+        profile                       => undef,
+        'default profile'             => undef,
+        'default-scan-options'        => undef,
+        'rotate facing'               => 0,
+        'rotate reverse'              => 0,
+        'default filename'            => '%a %y-%m-%d',
+        'view files toggle'           => TRUE,
+        'threshold-before-ocr'        => FALSE,
+        'threshold tool'              => 80,
         'Blank threshold' => 0.005,    # Blank page standard deviation threshold
         'Dark threshold'  => 0.12,     # Dark page mean threshold
         'OCR on scan'     => TRUE,
