@@ -2,6 +2,8 @@
 
 * + post-save hook.
   Closes feature request #93 (post-save arbitrary command capability)
+* + option in Edit/Preferences to force # pages = all if ADF if selected
+  Closes feature request #54 (When changing to ADF auto select All)
 
 
 1.6.0 (02.12.2016):
